--- a/python-4.slides.html
+++ b/python-4.slides.html
@@ -12998,8 +12998,13 @@ ul.typeahead-list  > li > a.pull-right {
 /*# sourceMappingURL=style.min.css.map */
     </style>
 <style type="text/css">
-    .highlight .hll { background-color: #ffffcc }
-.highlight  { background: #f8f8f8; }
+    pre { line-height: 125%; margin: 0; }
+td.linenos pre { color: #000000; background-color: #f0f0f0; padding: 0 5px 0 5px; }
+span.linenos { color: #000000; background-color: #f0f0f0; padding: 0 5px 0 5px; }
+td.linenos pre.special { color: #000000; background-color: #ffffc0; padding: 0 5px 0 5px; }
+span.linenos.special { color: #000000; background-color: #ffffc0; padding: 0 5px 0 5px; }
+.highlight .hll { background-color: #ffffcc }
+.highlight { background: #f8f8f8; }
 .highlight .c { color: #408080; font-style: italic } /* Comment */
 .highlight .err { border: 1px solid #FF0000 } /* Error */
 .highlight .k { color: #008000; font-weight: bold } /* Keyword */
@@ -13067,6 +13072,19 @@ ul.typeahead-list  > li > a.pull-right {
 .highlight .vi { color: #19177C } /* Name.Variable.Instance */
 .highlight .vm { color: #19177C } /* Name.Variable.Magic */
 .highlight .il { color: #666666 } /* Literal.Number.Integer.Long */
+    </style>
+<style type="text/css">
+    /*This file contains any manual css for this page that needs to override the global styles.
+This is only required when different pages style the same element differently. This is just
+a hack to deal with our current css styles and no new styling should be added in this file.*/
+
+#ipython-main-app {
+    position: relative;
+}
+#jupyter-main-app {
+    position: relative;
+}
+
     </style>
 
 
@@ -13203,7 +13221,8 @@ a.anchor-link {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="Introduction-to-Programming-&#8211;-Python">Introduction to Programming &#8211; Python<a class="anchor-link" href="#Introduction-to-Programming-&#8211;-Python">&#182;</a></h1><hr>
-<h2 id="Course-4-&#8211;-Exercices-and-functions">Course 4 &#8211; Exercices and functions<a class="anchor-link" href="#Course-4-&#8211;-Exercices-and-functions">&#182;</a></h2><h3 id="ESSEC-Business-School">ESSEC Business School<a class="anchor-link" href="#ESSEC-Business-School">&#182;</a></h3><p><a href="gael.guibon@inria.fr">gael.guibon@inria.fr</a></p>
+<h2 id="Course-4-&#8211;-Exercices-and-functions">Course 4 &#8211; Exercices and functions<a class="anchor-link" href="#Course-4-&#8211;-Exercices-and-functions">&#182;</a></h2><h3 id="ESSEC-Business-School">ESSEC Business School<a class="anchor-link" href="#ESSEC-Business-School">&#182;</a></h3><p><a href="gael.guibon@gmail.com">gael.guibon@gmail.com</a></p>
+<p><a href="gael.guibon@telecom-paris.fr">gael.guibon@telecom-paris.fr</a></p>
 <p>Original content, some parts inspired by <a href="https://github.com/clement-plancq/python-im">Clement Plancq's IM courses</a></p>
 <p>Licenced under Affero GNU3</p>
 
