--- a/python-5.html
+++ b/python-5.html
@@ -12947,8 +12947,13 @@ ul.typeahead-list  > li > a.pull-right {
 /*# sourceMappingURL=style.min.css.map */
     </style>
 <style type="text/css">
-    .highlight .hll { background-color: #ffffcc }
-.highlight  { background: #f8f8f8; }
+    pre { line-height: 125%; margin: 0; }
+td.linenos pre { color: #000000; background-color: #f0f0f0; padding: 0 5px 0 5px; }
+span.linenos { color: #000000; background-color: #f0f0f0; padding: 0 5px 0 5px; }
+td.linenos pre.special { color: #000000; background-color: #ffffc0; padding: 0 5px 0 5px; }
+span.linenos.special { color: #000000; background-color: #ffffc0; padding: 0 5px 0 5px; }
+.highlight .hll { background-color: #ffffcc }
+.highlight { background: #f8f8f8; }
 .highlight .c { color: #408080; font-style: italic } /* Comment */
 .highlight .err { border: 1px solid #FF0000 } /* Error */
 .highlight .k { color: #008000; font-weight: bold } /* Keyword */
@@ -13017,6 +13022,19 @@ ul.typeahead-list  > li > a.pull-right {
 .highlight .vm { color: #19177C } /* Name.Variable.Magic */
 .highlight .il { color: #666666 } /* Literal.Number.Integer.Long */
     </style>
+<style type="text/css">
+    /*This file contains any manual css for this page that needs to override the global styles.
+This is only required when different pages style the same element differently. This is just
+a hack to deal with our current css styles and no new styling should be added in this file.*/
+
+#ipython-main-app {
+    position: relative;
+}
+#jupyter-main-app {
+    position: relative;
+}
+
+    </style>
 
 
 <style type="text/css">
@@ -13078,7 +13096,8 @@ div#notebook {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="Introduction-to-Programming-&#8211;-Python">Introduction to Programming &#8211; Python<a class="anchor-link" href="#Introduction-to-Programming-&#8211;-Python">&#182;</a></h1><hr>
-<h2 id="Course-5-&#8211;-Files,-Modules-and-Exceptions">Course 5 &#8211; Files, Modules and Exceptions<a class="anchor-link" href="#Course-5-&#8211;-Files,-Modules-and-Exceptions">&#182;</a></h2><h3 id="ESSEC-Business-School">ESSEC Business School<a class="anchor-link" href="#ESSEC-Business-School">&#182;</a></h3><p><a href="gael.guibon@inria.fr">gael.guibon@inria.fr</a></p>
+<h2 id="Course-5-&#8211;-Files,-Modules-and-Exceptions">Course 5 &#8211; Files, Modules and Exceptions<a class="anchor-link" href="#Course-5-&#8211;-Files,-Modules-and-Exceptions">&#182;</a></h2><h3 id="ESSEC-Business-School">ESSEC Business School<a class="anchor-link" href="#ESSEC-Business-School">&#182;</a></h3><p><a href="gael.guibon@gmail.com">gael.guibon@gmail.com</a></p>
+<p><a href="gael.guibon@telecom-paris.fr">gael.guibon@telecom-paris.fr</a></p>
 <p>Licenced under Affero GNU3</p>
 
 </div>
@@ -13116,7 +13135,7 @@ div#notebook {
 <li>Open terminal(unix/mac) or CommandLine(windows), type <code>python</code> to start an interactive python environnement</li>
 <li>Create a file named <code>my_super_program.py</code> and type <code>print('hello')</code> inside. Execute this file by typing <code>python3 my_super_program.py</code>.</li>
 </ul>
-<p>To code you mmay need an IDE for smoother coding. I would suggest <a href="https://code.visualstudio.com/Download">Visual Studio Code</a>. For a python only IDE the best one would be <a href="https://www.jetbrains.com/pycharm/">PyCharm</a>.</p>
+<p>To code you may need an IDE for smoother coding. I would suggest <a href="https://code.visualstudio.com/Download">Visual Studio Code</a>. For a python only IDE the best one would be <a href="https://www.jetbrains.com/pycharm/">PyCharm</a>.</p>
 
 </div>
 </div>
@@ -13222,7 +13241,7 @@ div#notebook {
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">myFile</span> <span class="o">=</span> <span class="nb">open</span><span class="p">(</span><span class="s1">&#39;test.txt&#39;</span><span class="p">,</span> <span class="s1">&#39;r&#39;</span><span class="p">)</span> <span class="c1"># open an existing file with &#39;r&#39; (r = read)</span>
 <span class="n">fileContent</span> <span class="o">=</span> <span class="n">myFile</span><span class="o">.</span><span class="n">read</span><span class="p">()</span> <span class="c1"># put the content into a variable</span>
 <span class="n">myFile</span><span class="o">.</span><span class="n">close</span><span class="p">()</span>
-<span class="nb">print</span><span class="p">(</span><span class="n">fileContent</span><span class="p">)</span> <span class="c1"># display the content</span>
+<span class="nb">print</span><span class="p">(</span><span class="n">fileContent</span><span class="p">,</span> <span class="nb">type</span><span class="p">(</span><span class="n">fileContent</span><span class="p">))</span> <span class="c1"># display the content</span>
 </pre></div>
 
     </div>
@@ -13383,7 +13402,7 @@ To do so we can use the <code>json</code> module to open it:</p>
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">myFile</span> <span class="o">=</span> <span class="nb">open</span><span class="p">(</span><span class="s1">&#39;test.json&#39;</span><span class="p">,</span> <span class="s1">&#39;r&#39;</span><span class="p">)</span>
 <span class="n">content</span> <span class="o">=</span> <span class="n">json</span><span class="o">.</span><span class="n">load</span><span class="p">(</span><span class="n">myFile</span><span class="p">)</span>
 <span class="nb">print</span><span class="p">(</span><span class="nb">type</span><span class="p">(</span><span class="n">content</span><span class="p">))</span>
-<span class="nb">print</span><span class="p">(</span><span class="n">content</span><span class="p">)</span>
+<span class="c1">#print(content)</span>
 <span class="nb">print</span><span class="p">(</span><span class="n">content</span><span class="p">[</span><span class="s1">&#39;run&#39;</span><span class="p">])</span>
 </pre></div>
 
@@ -13438,7 +13457,7 @@ To do so we can use the <code>json</code> module to open it:</p>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># first import the sys module (sys = system)</span>
-<span class="kn">import</span> <span class="nn">sys</span>
+<span class="kn">import</span> <span class="nn">sys</span><span class="o">,</span> <span class="nn">json</span><span class="o">,</span> <span class="nn">re</span>
 </pre></div>
 
     </div>
@@ -13481,7 +13500,8 @@ To do so we can use the <code>json</code> module to open it:</p>
 <div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="k">try</span><span class="p">:</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="k">del</span> <span class="n">cake</span>
+<span class="k">try</span><span class="p">:</span>
     <span class="nb">print</span><span class="p">(</span> <span class="n">cake</span> <span class="p">)</span>
 <span class="k">except</span><span class="p">:</span>
     <span class="nb">print</span><span class="p">(</span> <span class="s1">&#39;A problem occurred!&#39;</span><span class="p">)</span>
@@ -13634,7 +13654,7 @@ To do so we can use the <code>json</code> module to open it:</p>
 <div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Example with dict and basic functions and health management</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Example with dict and  ba sic functions and health management</span>
 <span class="c1"># Placeholders for you to insert requested code</span>
 <span class="n">player</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">()</span>
 <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Hello Player One, what&#39;s your name?&quot;</span><span class="p">)</span>
